Update to Spring Boot 3.1.5